<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/SignUpWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/enter_new_username_and_password"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/colorIcons"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpPassword" />

    <!-- Constraint relative to SignUpWelcome TextView -->

    <EditText
        android:id="@+id/signUpUsername"
        android:layout_width="207dp"
        android:layout_height="42dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:backgroundTint="@color/colorIcons"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:hint="@string/editText_username"
        android:textColor="@color/colorIcons"
        android:textColorHint="@color/colorIcons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUpWelcome" />

    <EditText
        android:id="@+id/signUpPassword"
        android:layout_width="207dp"
        android:layout_height="42dp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:backgroundTint="@color/colorIcons"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:hint="@string/password"
        android:textColor="@color/colorIcons"
        android:textColorHint="@color/colorIcons"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpUsername" /> <!-- Constraint relative to signUpUsername EditText -->

</androidx.constraintlayout.widget.ConstraintLayout>



